--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,16 @@
   margin: 0;
   padding: 0;
 }
+html,
+body {
+  overflow-x: hidden;
+  overflow-y: hidden;
+  scroll-behavior: smooth;
+}
+body {
+  position: relative;
+}
 .App {
-  background-color: #221;
+  /* background-color: #221; */
   height: 100vh;
 }
