--- a/src/contact/style.css
+++ b/src/contact/style.css
@@ -15,7 +15,7 @@
   font-weight: 700;
   line-height: 2;
   height: 100vh;
-  background-color: #221;
+  /* background-color: #221; */
   text-transform: uppercase;
 }
 h1 {
