--- a/src/main/style.css
+++ b/src/main/style.css
@@ -1,8 +1,11 @@
+.container {
+  background-color: #221;
+}
 .transition {
   height: 100vh;
   width: 100vw;
   position: absolute;
-  z-index: 9999;
+  z-index: 999;
   overflow: hidden;
 }
 .wrapper {
@@ -15,9 +18,7 @@
   font-weight: 700;
   line-height: 2;
   height: 100vh;
-  background-color: #221;
   text-transform: uppercase;
-  overflow: hidden;
 }
 h1 {
   color: #4faf44;
@@ -55,4 +56,8 @@ li {
 }
 li {
   list-style-type: none;
+}
+
+.noise {
+  z-index: 999;
 }
