--- a/src/components/animation/fuzzyEffect/style.css
+++ b/src/components/animation/fuzzyEffect/style.css
@@ -1,9 +1,12 @@
+.fuzzy-container {
+  background-color: #221;
+}
 
 .fuzzy-overlay {
   position: absolute;
   height: 400%;
   width: 400%;
-  /* background-image: url('../../../public/noise.jpg'); */
+  background-image: url('../../../../public/noise.jpg');
   inset: -200%;
   pointer-events: none;
 }
