add button animation, default route

--- a/src/contact/style.css
+++ b/src/contact/style.css
@@ -1,4 +1,4 @@
-
+/* 
 .wrapper {
   display: flex;
   flex-direction: column;
@@ -9,7 +9,6 @@
   font-weight: 700;
   line-height: 2;
   height: 100vh;
-  /* background-color: #221; */
   text-transform: uppercase;
 }
 h1 {
@@ -49,4 +48,4 @@ li {
 }
 li {
   list-style-type: none;
-}
+} */
