--- a/src/about/style.css
+++ b/src/about/style.css
@@ -1,4 +1,4 @@
-.wrapper {
+/* .wrapper {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -8,7 +8,6 @@
   font-weight: 700;
   line-height: 2;
   height: 100vh;
-  /* background-color: #221; */
   text-transform: uppercase;
 }
 h1 {
@@ -48,4 +47,4 @@ li {
 }
 li {
   list-style-type: none;
-}
+} */
