--- a/src/main/style.css
+++ b/src/main/style.css
@@ -19,22 +19,9 @@ a {
   color: #f6eb14;
 }
 
-.wrapper-menu {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  font-family: 'Press Start 2P';
-  font-size: 40px;
-  font-weight: 700;
-  line-height: 2;
-  height: 100vh;
-  text-transform: uppercase;
-}
-
 .menu-list-menu,
 .title-menu,
-.title-name-menu{
+.title-name-menu {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -47,7 +34,7 @@ a {
   align-items: center;
 }
 
-.title-menu div h1,
+.title-menu h1,
 h2 {
   background: -webkit-linear-gradient(#4faf44, #f6eb14);
   background-clip: text;
