--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+:root {
+  --color-black: #000000;
+  --color-white: #ffffff;
+  --color-raisin: #222221;
+  --color-apple: #4faf44;
+  --color-flavescent: #fff090;
+  --color-sun: #f6eb14;
+}
 * {
   margin: 0;
   padding: 0;
@@ -12,7 +20,7 @@ body {
   position: relative;
 }
 .App {
-  background-color: #000;
+  background-color: var(--color-black);
   height: 100vh;
 }
 
@@ -29,8 +37,8 @@ body {
   text-transform: uppercase;
 }
 
-.wrapper h1 {
-  background: -webkit-linear-gradient(#4faf44, #f6eb14);
+h1.title {
+  background: -webkit-linear-gradient(var(--color-apple), var(--color-sun));;
   background-clip: text;
   -webkit-text-fill-color: transparent;
   z-index: 9999;
