--- a/src/components/animation/black-bg/style.css
+++ b/src/components/animation/black-bg/style.css
@@ -6,7 +6,7 @@
   position: absolute;
   width: 100vw;
   height: 100vh;
-  background-color: #221;
+  background-color: var(--color-raisin);
   display: flex;
   justify-content: center;
   align-items: center;
