--- a/src/main/style.css
+++ b/src/main/style.css
@@ -1,5 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Offside&display=swap');
+
+
+
+.main-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 2;
+  height: 100vh;
+  text-transform: uppercase;
+}
 
 a {
   text-decoration: none;
@@ -54,7 +66,7 @@ h2 {
   font-weight: 700;
   line-height: 2;
   height: 100vh;
-  text-transform: uppercase;
+  text-transform: capitalize;
 }
 .arrow-menu:hover {
   cursor: pointer;
