--- a/src/App.css
+++ b/src/App.css
@@ -38,9 +38,19 @@ body {
   justify-content: center;
   height: 100vh;
 }
-h1.title {
+/* h1.title {
   background: -webkit-linear-gradient(var(--color-apple), var(--color-sun));
   background-clip: text;
   -webkit-text-fill-color: transparent;
   z-index: 9999;
+} */
+
+.disabled-link {
+  pointer-events: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
