--- a/src/about/style.css
+++ b/src/about/style.css
@@ -8,19 +8,23 @@
 }
 
 .chatbox {
-  height: auto;
+  height: 110px;
   width: 1200px;
   position: absolute;
   bottom: 0px;
 }
 
+.options {
+  position: absolute;
+  right: 0px;
+  top: 30px;
+}
+
 .about-content p {
   position: absolute;
-  bottom: 40px;
+  bottom: 35px;
   z-index: 2;
-  text-align: justify;
-  text-justify: inter-word;
-  color: var(--color-apple);
+  color: var(--color-raisin);
   width: 1100px;
   line-height: 1.5;
 }
