--- a/src/App.css
+++ b/src/App.css
@@ -70,3 +70,13 @@ h1.title {
   height: 96%;
   width: 97%;
 }
+
+.vignette {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: inset 0 0 5em 1em #000;
+  /* box-shadow: 0 0 200px rgba(0, 0, 0, 0.9) inset; */
+}
