--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,10 @@
 :root {
   --color-black: #000000;
   --color-white: #ffffff;
-  --color-raisin: #222221;
-  --color-apple: #4faf44;
-  --color-flavescent: #fff090;
-  --color-sun: #f6eb14;
+  --color-alabaster: #f2f0e5;
+  --color-iceberg: #68c2d3;
+  --color-cyan-azure: #4b80ca;
+  --color-sea-foam: #a2dcc7;
 }
 
 * {
@@ -40,7 +40,10 @@ body {
 }
 
 h1.title {
-  background: -webkit-linear-gradient(var(--color-apple), var(--color-sun));
+  background: -webkit-linear-gradient(
+    var(--color-cyan-azure),
+    var(--color-iceberg)
+  );
   background-clip: text;
   -webkit-text-fill-color: transparent;
   z-index: 9999;
@@ -60,7 +63,7 @@ h1.title {
   position: absolute;
   width: 100vw;
   height: 100vh;
-  background-color: var(--color-raisin);
+  background-color: var(--color-alabaster);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -72,10 +75,9 @@ h1.title {
 }
 
 .vignette {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  box-shadow: inset 0 0 5em 1em #000;
+  width: 100vw;
+  height: 100vh;
+  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/86186/crt.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
