--- a/src/about/style.css
+++ b/src/about/style.css
@@ -38,7 +38,7 @@
   position: absolute;
   bottom: 35px;
   z-index: 2;
-  color: var(--color-raisin);
+  color: var(--color-black);
   width: 1100px;
   line-height: 1.5;
   font-size: 15px;
