--- a/src/components/menu-header/style.css
+++ b/src/components/menu-header/style.css
@@ -5,7 +5,6 @@
   left: -135px;
   z-index: 9999;
   text-transform: capitalize;
-  color: var(--color-sun);
   transform: rotate(270deg);
 }
 
@@ -18,5 +17,5 @@
 .selected {
   text-decoration-thickness: 2px !important;
   text-decoration: line-through;
-  text-decoration-color: var(--color-raisin) !important;
+  text-decoration-color: var(--color-alabaster) !important;
 }
