--- a/src/main/style.css
+++ b/src/main/style.css
@@ -1,6 +1,3 @@
-
-
-
 .main-wrapper {
   display: flex;
   flex-direction: column;
@@ -28,7 +25,7 @@ a {
 .arrow-menu {
   position: relative;
   display: block;
-  color: var(--color-sun);
+  color: var(--color-cyan-azure);
 }
 
 .menu-list-menu,
@@ -48,7 +45,10 @@ a {
 
 .title-menu h1,
 h2 {
-  background: -webkit-linear-gradient(var(--color-apple), var(--color-sun));
+  background: -webkit-linear-gradient(
+    var(--color-cyan-azure),
+    var(--color-iceberg)
+  );
   background-clip: text;
   -webkit-text-fill-color: transparent;
   transform: perspective(200px) rotateX(40deg);
@@ -57,7 +57,7 @@ h2 {
 .title-menu p {
   font-size: 15px;
   margin-left: -32px;
-  color: var(--color-white);
+  color: var(--color-sea-foam);
   font-family: 'Offside';
 }
 
@@ -70,7 +70,7 @@ h2 {
 }
 .arrow-menu:hover {
   cursor: pointer;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .arrow-menu:hover .sign-menu {
