--- a/src/main/style.css
+++ b/src/main/style.css
@@ -57,7 +57,7 @@ h2 {
 .title-menu p {
   font-size: 15px;
   margin-left: -32px;
-  color: var(--color-sea-foam);
+  color: var(--color-black);
   font-family: 'Offside';
 }
 
