--- a/src/components/animation/fuzzyEffect/style.css
+++ b/src/components/animation/fuzzyEffect/style.css
@@ -1,9 +1,21 @@
-
 .fuzzy-overlay {
   position: absolute;
   height: 400%;
   width: 400%;
-  background-image: url('../../../../public/images/noise.jpg');
   inset: -200%;
   pointer-events: none;
+}
+
+.init-fuzzy {
+  background-image: url('../../../../public/images/noise.png');
+}
+
+.bg-fuzzy {
+  background-image: linear-gradient(
+      0deg,
+      rgba(242, 240, 229, 0.92),
+      rgba(242, 240, 229, 0.92)
+    ),
+    url('../../../../public/images/noise.png');
+    z-index: -1;
 }
