--- a/src/components/jigsaw/style.css
+++ b/src/components/jigsaw/style.css
@@ -1,11 +1,13 @@
-.jigsaw-content {
+.jigsaw-container {
   width: 80%;
   height: auto;
 }
 
+.jigsaw-content {
+  margin: 0 1rem 1.5rem;
+}
+
 .jigsaw-puzzle {
   border: 2px solid black;
-  margin-right: auto;
-  margin: 0 1rem 1rem;
   box-shadow: 0 5px 10px 2px rgba(0, 0, 0, 0.25);
 }
