add media query

--- a/src/components/start-button/style.css
+++ b/src/components/start-button/style.css
@@ -14,3 +14,9 @@
   font-weight: 700;
   color: var(--color-cyan-azure);
 }
+
+@media screen and (max-width: 767px) {
+  .start-button h1 {
+    font-size: 26px;
+  }
+}
