--- a/src/about/style.css
+++ b/src/about/style.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  position: relative;
   align-items: center;
   height: 100%;
 }
@@ -10,10 +9,12 @@
 .options {
   position: absolute;
   right: 0px;
-  top: 70px;
+  margin-top: 12rem;
+  z-index: 2;
 }
 
 .avatar {
+  height: 1200px;
   transform: translatey(28%);
   width: auto;
 }
@@ -26,12 +27,27 @@
   overflow: hidden;
 }
 
-.about-content p {
-  position: absolute;
-  bottom: 35px;
-  z-index: 2;
-  color: var(--color-black);
-  width: 1100px;
-  line-height: 1.5;
-  font-size: 15px;
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .options {
+    margin-top: 12rem;
+  }
+  .not-third-options {
+    top: 190px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .avatar {
+    height: 600px;
+    width: auto;
+    transform: translatey(20%);
+  }
+
+  .options {
+    margin-top: 12rem;
+  }
+
+  .not-third-options {
+    top: 90px;
+  }
 }
