--- a/src/components/menu-header/style.css
+++ b/src/components/menu-header/style.css
@@ -1,15 +1,14 @@
 .header-wrapper {
   display: flex;
   position: absolute;
-  left: -135px;
+  left: -150px;
   z-index: 9999;
   text-transform: capitalize;
   transform: rotate(270deg);
 }
 
 .header-content {
-  font-size: 10px;
-  justify-content: space-around;
+  font-size: 12px;
   margin-right: 2rem;
 }
 
@@ -17,4 +16,13 @@
   text-decoration-thickness: 2px !important;
   text-decoration: line-through;
   text-decoration-color: var(--color-alabaster) !important;
+}
+
+@media screen and (max-width: 767px) {
+  .header-wrapper {
+    left: -150px;
+  }
+  .header-content {
+    font-size: 10px;
+  }
 }
