--- a/src/components/text-box/style.css
+++ b/src/components/text-box/style.css
@@ -3,9 +3,52 @@
   justify-content: center;
   align-items: center;
 }
+
+.text-box p {
+  position: absolute;
+  bottom: 40px;
+  z-index: 2;
+  color: var(--color-black);
+  width: 80%;
+  line-height: 1.5;
+  font-size: 15px;
+}
+
 .chatbox {
-  height: 110px;
-  width: 1200px;
+  height: 20%;
+  width: 85%;
   position: absolute;
   bottom: 0px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .not-third-text p {
+    bottom: 30px;
+  }
+  .not-third-chatbox {
+    height: 12%;
+  }
+  .chatbox {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .text-box p {
+    bottom: 25px;
+    width: 90%;
+    font-size: 8px;
+  }
+  .not-third-text p {
+    bottom: 22px;
+  }
+
+  .chatbox {
+    height: 22%;
+    width: 100%;
+  }
+
+  .not-third-chatbox {
+    height: 12%;
+  }
 }
