--- a/src/main/style.css
+++ b/src/main/style.css
@@ -62,12 +62,13 @@ h2 {
 }
 
 .menu-list-menu {
-  font-size: 25px;
+  font-size: 30px;
   font-weight: 700;
   line-height: 2;
   height: 100vh;
   text-transform: capitalize;
 }
+
 .arrow-menu:hover {
   cursor: pointer;
   background-color: rgba(0, 0, 0, 0.1);
@@ -80,6 +81,29 @@ h2 {
   left: -2em;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .menu-list-menu {
+    font-size: 40px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .title-menu h1 {
+    font-size: 42px;
+  }
+  .title-menu h2 {
+    font-size: 35px;
+  }
+
+  .title-menu p {
+    font-size: 12px;
+    margin-left: -10px;
+  }
+
+  .menu-list-menu {
+    font-size: 25px;
+  }
+}
 /* .title-bg {
   background-color: black;
   position: absolute;
