--- a/src/components/text-box/style.css
+++ b/src/components/text-box/style.css
@@ -18,7 +18,7 @@
   height: 20%;
   width: 85%;
   position: absolute;
-  bottom: 0px;
+  bottom: 0;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
@@ -35,20 +35,21 @@
 
 @media screen and (max-width: 767px) {
   .text-box p {
-    bottom: 25px;
+    bottom: 30%;
     width: 90%;
     font-size: 8px;
   }
   .not-third-text p {
-    bottom: 22px;
+    bottom: 30%;
   }
 
   .chatbox {
-    height: 22%;
+    height: 14%;
     width: 100%;
+    bottom: 27%;
   }
 
   .not-third-chatbox {
-    height: 12%;
+    height: 8%;
   }
 }
