--- a/src/App.css
+++ b/src/App.css
@@ -18,10 +18,9 @@
 
 html,
 body {
-  /* overflow-x: hidden;
+  overflow-x: hidden;
   overflow-y: hidden;
-  scroll-behavior: smooth; */
-  height: calc(var(--vh, 1vh) * 100);
+  scroll-behavior: smooth;
 }
 
 body {
