--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 100vh;
+  height: 100%;
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
@@ -63,8 +63,8 @@ h1.title {
 
 .frame-container {
   position: absolute;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -77,8 +77,8 @@ h1.title {
 
 .vignette {
   position: absolute;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-size: 100% 100%;
   pointer-events: none;
   background: none !important;
