--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 100%;
+  height: 100vh;
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
