--- a/src/components/text-box/style.css
+++ b/src/components/text-box/style.css
@@ -7,49 +7,33 @@
 .text-box p {
   position: absolute;
   bottom: 40px;
+  padding: 2rem;
   z-index: 2;
   color: var(--color-black);
   width: 80%;
   line-height: 1.5;
   font-size: 15px;
-}
-
-.chatbox {
-  height: 20%;
-  width: 85%;
-  position: absolute;
-  bottom: 0;
+  border: solid 5px var(--color-black);
+  background-color: var(--color-white);
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
+  .text-box p {
+    bottom: 22%;
+  }
   .not-third-text p {
-    bottom: 30px;
-  }
-  .not-third-chatbox {
-    height: 12%;
-  }
-  .chatbox {
-    width: 90%;
+    bottom: 30%;
   }
 }
 
 @media screen and (max-width: 767px) {
   .text-box p {
-    bottom: 30%;
-    width: 90%;
-    font-size: 8px;
+    bottom: 35%;
+    width: 85%;
+    font-size: 10px;
+    padding: 1rem;
   }
   .not-third-text p {
-    bottom: 30%;
-  }
-
-  .chatbox {
-    height: 14%;
-    width: 100%;
-    bottom: 27%;
-  }
-
-  .not-third-chatbox {
-    height: 8%;
+    bottom: 40%;
   }
 }
