--- a/src/main/style.css
+++ b/src/main/style.css
@@ -14,7 +14,7 @@ a {
   text-decoration: none;
 }
 
-.menu-list-menu li {
+.menu-list li {
   list-style-type: none;
 }
 
@@ -28,7 +28,7 @@ a {
   color: var(--color-cyan-azure);
 }
 
-.menu-list-menu,
+.menu-list,
 .title-menu,
 .title-name-menu {
   display: flex;
@@ -61,7 +61,7 @@ h2 {
   font-family: 'Offside';
 }
 
-.menu-list-menu {
+.menu-list {
   font-size: 30px;
   font-weight: 700;
   line-height: 2;
@@ -82,7 +82,7 @@ h2 {
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-  .menu-list-menu {
+  .menu-list {
     font-size: 40px;
   }
 }
@@ -100,8 +100,9 @@ h2 {
     margin-left: -10px;
   }
 
-  .menu-list-menu {
+  .menu-list {
     font-size: 25px;
+    margin-top: -10rem;
   }
 }
 /* .title-bg {
