--- a/src/components/jigsaw/style.css
+++ b/src/components/jigsaw/style.css
@@ -11,3 +11,50 @@
   border: 2px solid black;
   box-shadow: 0 5px 10px 2px rgba(0, 0, 0, 0.25);
 }
+
+.dimmer-container {
+  transition: 0.2s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+  z-index: 2;
+}
+
+.jigsaw-container:hover .dimmer-container {
+  opacity: 1;
+}
+
+.dimmer-mobile {
+  opacity: 1;
+}
+
+.dimmer-content {
+  color: var(--color-black);
+  font-size: 12px;
+  padding: 16px 20px;
+  background-color: var(--color-alabaster);
+  border-radius: 15px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .jigsaw-container {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .jigsaw-container {
+    width: 100%;
+  }
+  .middle {
+    width: 60%;
+  }
+  .text {
+    padding: 5px 5px;
+    font-size: 7px;
+  }
+}
