--- a/src/components/menu-header/style.css
+++ b/src/components/menu-header/style.css
@@ -17,10 +17,33 @@
   text-decoration: line-through;
   text-decoration-color: var(--color-alabaster) !important;
 }
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .header-wrapper {
+    top: 5%;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin:auto;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    transform: rotate(0deg);
+    margin-left: 2rem;
+  }
+}
 
 @media screen and (max-width: 767px) {
   .header-wrapper {
-    left: -150px;
+    top: 5%;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin:auto;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    transform: rotate(0deg);
+    margin-left: 2rem;
   }
   .header-content {
     font-size: 10px;
