--- a/src/projects/style.css
+++ b/src/projects/style.css
@@ -23,8 +23,7 @@
 
 .content p {
   font-size: 20px;
-  padding: 1rem 0 1.5rem;
-  position: sticky;
+  padding: 1.5rem 0 1.5rem;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
@@ -40,9 +39,10 @@
 
 @media screen and (max-width: 767px) {
   .container {
+    margin: 4rem 0rem;
     display: flex;
     justify-content: center;
-    width: 75%;
+    width: 100%;
   }
   .content {
     width: 100%;
