--- a/src/components/menu-header/style.css
+++ b/src/components/menu-header/style.css
@@ -5,6 +5,8 @@
   z-index: 9999;
   text-transform: capitalize;
   transform: rotate(270deg);
+  pointer-events: none;
+  background: none !important;
 }
 
 .header-content {
@@ -23,7 +25,7 @@
     left: 0;
     bottom: 0;
     right: 0;
-    margin:auto;
+    margin: auto;
     position: fixed;
     display: flex;
     justify-content: center;
@@ -38,7 +40,7 @@
     left: 0;
     bottom: 0;
     right: 0;
-    margin:auto;
+    margin: auto;
     position: fixed;
     display: flex;
     justify-content: center;
