--- a/src/contact/style.css
+++ b/src/contact/style.css
@@ -8,15 +8,38 @@
 
 .contact-data {
   line-height: 1.2;
+  display: flex;
+  flex-direction: column;
 }
+
 .contact-content h1 {
   margin-bottom: 2rem;
 }
+
 .contact-content a {
   text-decoration: none;
   color: var(--color-black);
 }
 
-.contact-content p {
+.contact-content div {
+  display: flex;
+  flex-direction: column;
   margin: 0.5rem 0;
+}
+
+.contact-content #internet {
+  display: flex;
+  flex-direction: row;
+}
+
+.line {
+  margin: 0 0.5rem;
+  font-size: 16px;
+  vertical-align: middle;
+}
+
+@media screen and (max-width: 767px) {
+  .contact-content div {
+    font-size: 12px;
+  }
 }
