--- a/src/components/text-options/style.css
+++ b/src/components/text-options/style.css
@@ -12,6 +12,10 @@
   border: solid 3px black;
 }
 
+.dimmer-option {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
 @media screen and (max-width: 767px) {
   .options-content button {
     padding: 0.8rem;
