--- a/src/projects/style.css
+++ b/src/projects/style.css
@@ -25,6 +25,16 @@
   padding: 1.5rem 0 1.5rem;
 }
 
+.project-img-container {
+  border: solid 2px red;
+  height: 100%;
+  width: 100%;
+  z-index: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .project-container {
     display: flex;
