--- a/src/projects/style.css
+++ b/src/projects/style.css
@@ -1,8 +1,8 @@
 .project-container {
-  position: relative;
-  z-index: 9999;
   height: 100%;
   margin: 4rem;
+  position: relative;
+  z-index: 9999;
   overflow: auto;
   -ms-overflow-style: none;
   scrollbar-width: none;
@@ -13,11 +13,11 @@
 }
 
 .project-content {
-  width: 100%;
-  height: auto;
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  height: auto;
+  width: 100%;
 }
 
 .project-content p {
@@ -26,13 +26,49 @@
 }
 
 .project-img-container {
-  border: solid 2px red;
-  height: 100%;
-  width: 100%;
-  z-index: 0;
+  align-items: center;
   display: flex;
   flex-direction: column;
+  gap: 1rem;
+  height: auto;
+  justify-content: center;
+  width: 100%;
+  z-index: 0;
+}
+
+.project-img-content {
   align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 80%;
+}
+
+.dimmer-container {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  opacity: 0;
+  position: absolute;
+  text-align: center;
+  transition: 0.2s ease;
+  z-index: 2;
+}
+
+.project-img-content:hover .dimmer-container {
+  opacity: 1;
+}
+
+.dimmer-content {
+  color: var(--color-black);
+  font-size: 12px;
+  padding: 16px 20px;
+  background-color: var(--color-alabaster);
+  border-radius: 15px;
+}
+
+.dimmer-mobile {
+  opacity: 1;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
@@ -48,12 +84,23 @@
 
 @media screen and (max-width: 767px) {
   .project-container {
-    margin: 4rem 0.5rem;
     display: flex;
     justify-content: center;
+    margin: 4rem 0.5rem;
     width: 95%;
   }
   .project-content {
     width: 100%;
+  }
+
+  .project-img-container {
+    margin-top: 1rem;
+  }
+  .dimmer-container {
+    width: 60%;
+  }
+  .dimmer-content {
+    padding: 5px 5px;
+    font-size: 7px;
   }
 }
