--- a/src/components/text-options/style.css
+++ b/src/components/text-options/style.css
@@ -14,6 +14,10 @@
   background-color: var(--color-white);
 }
 
+.options-content button:hover {
+  border: solid 3px var(--color-iceberg);
+}
+
 .dimmer-option {
   filter: brightness(50%);
 }
