--- a/src/projects/style.css
+++ b/src/projects/style.css
@@ -42,6 +42,7 @@
   flex-direction: column;
   justify-content: center;
   width: 80%;
+  cursor: pointer;
 }
 
 .dimmer-container {
@@ -65,6 +66,7 @@
   padding: 16px 20px;
   background-color: var(--color-alabaster);
   border-radius: 15px;
+  cursor: pointer;
 }
 
 .dimmer-mobile {
