--- a/src/pages/projects/style.css
+++ b/src/pages/projects/style.css
@@ -39,10 +39,13 @@
 .project-img-content {
   align-items: center;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   width: 80%;
   cursor: pointer;
+}
+
+.project-img-content-bottom {
+  align-items: flex-end;
 }
 
 .dimmer-container {
@@ -56,6 +59,11 @@
   z-index: 2;
 }
 
+.dimmer-container-bottom {
+  margin-bottom: 1rem;
+  opacity: 1;
+}
+
 .project-img-content:hover .dimmer-container {
   opacity: 1;
 }
@@ -64,22 +72,23 @@
   color: var(--color-black);
   font-size: 12px;
   padding: 16px 20px;
-  background-color: var(--color-alabaster);
+  background-color: var(--color-banana-yellow);
   border-radius: 15px;
   cursor: pointer;
-}
-
-.dimmer-mobile {
-  opacity: 1;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .project-container {
     display: flex;
     justify-content: center;
-    width: 85%;
+    width: 84%;
   }
-  .project-content {
+
+  .project-img-container {
+    margin-top: 2rem;
+  }
+
+  .project-img-content {
     width: 100%;
   }
 }
@@ -91,16 +100,19 @@
     margin: 4rem 0.5rem;
     width: 95%;
   }
-  .project-content {
-    width: 100%;
-  }
 
   .project-img-container {
-    margin-top: 1rem;
+    margin-top: 0.5rem;
   }
+
+  .project-img-content {
+    width: 90%;
+  }
+
   .dimmer-container {
     width: 60%;
   }
+
   .dimmer-content {
     padding: 5px 5px;
     font-size: 7px;
