test avatar text location

--- a/src/components/avatar/style.css
+++ b/src/components/avatar/style.css
@@ -26,16 +26,25 @@
   width: auto;
 }
 
+.text-container {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+}
+
 .options {
   margin-left: auto;
   margin-right: 0;
-  margin-bottom: 35rem;
+  /* margin-bottom: 35rem; */
   z-index: 2;
 }
 
 .box {
   width: 100%;
-  margin-bottom: 15rem;
+  /* margin-bottom: 15rem; */
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
@@ -43,14 +52,14 @@
     margin-top: 8rem;
   }
 
-  .options {
+  /* .options {
     margin-top: 10rem;
   }
 
   .box {
     width: 100%;
     margin-bottom: 0;
-  }
+  } */
 }
 
 @media screen and (max-width: 767px) {
@@ -59,7 +68,7 @@
     width: auto;
   }
 
-  .options {
+  /* .options {
     margin-left: auto;
     margin-right: 0;
     margin-bottom: 0;
@@ -69,5 +78,5 @@
   .box {
     width: 100%;
     margin-bottom: -18rem;
-  }
+  } */
 }
