--- a/src/components/menu-header/style.css
+++ b/src/components/menu-header/style.css
@@ -15,7 +15,7 @@
   text-decoration-color: var(--color-alabaster) !important;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .header-wrapper {
     height: 0px;
     top: -90%;
