--- a/src/components/avatar/style.css
+++ b/src/components/avatar/style.css
@@ -42,7 +42,7 @@
 }
 
 .box {
-  width: 100%;
+  width: 60%;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
@@ -59,5 +59,8 @@
 
   .text-container {
     bottom: auto;
+  }
+  .box {
+    width: 100%;
   }
 }
