--- a/src/pages/main/style.css
+++ b/src/pages/main/style.css
@@ -44,15 +44,23 @@ h2 {
   transform: perspective(200px) rotateX(40deg);
 }
 
+.title-menu h1 {
+  font-size: 80px;
+}
+
+.title-menu h2 {
+  font-size: 60px;
+}
+
 .title-menu p {
-  font-size: 15px;
+  font-size: 18px;
   margin-left: -32px;
   color: var(--color-black);
   font-family: 'Offside';
 }
 
 .menu-list {
-  font-size: 30px;
+  font-size: 40px;
   font-weight: 700;
   line-height: 2;
   height: 100vh;
@@ -69,7 +77,7 @@ h2 {
   .main-wrapper {
     height: 100dvh;
   }
-  
+
   .title-menu h1 {
     font-size: 42px;
   }
