--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Offside&display=swap');
 
 :root {
-  --app-height: 100%;
   --color-alabaster: #f2f0e5;
   --color-banana-yellow: #ffdb3b;
   --color-black: #000000;
@@ -80,6 +79,15 @@ h1.title {
   width: 100%;
   height: auto;
   filter: blur(1.4px);
+}
+
+.scanlines {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to top, #000000, #000000, #333333, #333333);
+  background-size: cover;
+  background-size: 100% 1px;
 }
 
 #--react--toast-container {
