--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,7 @@ h1.title {
   background-size: 100% 100%;
   pointer-events: none;
   background: none !important;
-  z-index: 100000;
+  z-index: 100;
 }
 
 .blurry {
@@ -81,13 +81,9 @@ h1.title {
   filter: blur(1.4px);
 }
 
-.scanlines {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(to top, #000000, #000000, #333333, #333333);
-  background-size: cover;
-  background-size: 100% 1px;
+.content-menu{
+  z-index: 5;
+  position: relative;
 }
 
 #--react--toast-container {
