--- a/src/components/animation/fuzzyEffect/style.css
+++ b/src/components/animation/fuzzyEffect/style.css
@@ -4,18 +4,21 @@
   width: 400%;
   inset: -200%;
   pointer-events: none;
-}
-
-.init-fuzzy {
+  z-index: 15;
   background-image: url('../../../../public/images/noise.png');
+  opacity: 1;
+  transition: opacity 1s ease-in-out 1s;
 }
 
 .bg-fuzzy {
-  background-image: linear-gradient(
-      0deg,
-      rgba(242, 240, 229, 0.92),
-      rgba(242, 240, 229, 0.92)
-    ),
-    url('../../../../public/images/noise.png');
-    z-index: -1;
+  opacity: 0.2
 }
+
+/* .scanlines {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to top, #000000, #000000, #333333, #333333);
+  background-size: cover;
+  background-size: 100% 1px;
+} */
