--- a/src/components/animation/fuzzyEffect/style.css
+++ b/src/components/animation/fuzzyEffect/style.css
@@ -4,21 +4,27 @@
   width: 400%;
   inset: -200%;
   pointer-events: none;
-  z-index: 15;
+  z-index: 110;
   background-image: url('../../../../public/images/noise.png');
   opacity: 1;
   transition: opacity 1s ease-in-out 1s;
 }
 
 .bg-fuzzy {
-  opacity: 0.2
+  opacity: 0.2;
 }
 
-/* .scanlines {
+.scanlines {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(to top, #000000, #000000, #333333, #333333);
-  background-size: cover;
-  background-size: 100% 1px;
-} */
+  height: 400%;
+  width: 400%;
+  inset: -200%;
+  pointer-events: none;
+  z-index: 110;
+  background: linear-gradient(
+    rgba(0, 0, 0, 0.2) 50%,
+    rgba(255, 255, 255, 0) 50%
+  );
+  background-size: 100% 10px; /* Tebal garis scanlines */
+  opacity: 0.5;
+}
