--- a/src/components/avatar/style.css
+++ b/src/components/avatar/style.css
@@ -29,7 +29,7 @@
 .text-container {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
   width: 100%;
   position: absolute;
   bottom: 0;
@@ -42,7 +42,7 @@
 }
 
 .box {
-  width: 60%;
+  width: 70%;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
@@ -52,15 +52,19 @@
 }
 
 @media screen and (max-width: 767px) {
+  .options {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+  }
+
   .avatar {
     height: 650px;
     width: auto;
   }
 
-  .text-container {
-    bottom: auto;
-  }
   .box {
-    width: 100%;
+    width: 90%;
+    margin-bottom: 1rem;
   }
 }
