--- a/src/components/text-box/style.css
+++ b/src/components/text-box/style.css
@@ -21,7 +21,10 @@
 @media screen and (max-width: 767px) {
   .text-box p {
     width: 85%;
-    font-size: 10px;
-    padding: 1rem;
+    font-size: 12px;
+  }
+  .text-box {
+    width: 100%;
+    margin-bottom: 1rem;
   }
 }
