--- a/src/components/avatar/style.css
+++ b/src/components/avatar/style.css
@@ -45,13 +45,17 @@
   width: 70%;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .avatar-container {
     margin-top: 8rem;
   }
 }
 
 @media screen and (max-width: 767px) {
+  .avatar-container {
+    margin-top: 4rem;
+  }
+
   .options {
     margin-left: auto;
     margin-right: auto;
