--- a/src/components/text-box/style.css
+++ b/src/components/text-box/style.css
@@ -20,11 +20,12 @@
 
 @media screen and (max-width: 767px) {
   .text-box p {
-    width: 85%;
-    font-size: 12px;
+    font-size: 10px;
+    padding: 1rem;
   }
+
   .text-box {
     width: 100%;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
   }
 }
