edit hovering option page btn

--- a/src/components/text-options/style.css
+++ b/src/components/text-options/style.css
@@ -40,6 +40,11 @@
   border: solid 3px var(--color-black);
   background-color: var(--color-white);
   padding: 3px;
+  cursor: pointer;
+}
+
+.blue-border-btn:hover {
+  border: solid 3px var(--color-iceberg);
 }
 
 .page-btn:disabled {
